@@ -1,5 +1,11 @@
 2009-06-10  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	* src/thbrk/brk-maximal.c (brk_maximal_do_impl, best_brk_contest): 
+	Use weighted scoring, rather than parameters prioritization, to choose
+	better solution.
+
+2009-06-10  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	* src/thbrk/brk-maximal.c (brk_maximal_do_impl): When recovering from
 	error, try to recover from the position next to the last break,
 	rather than right at the crash position. We care the input string,
